tests/vendor/invalid/semantics/undeclared_var_in_labeled_statement.c
//tags: simple, goto
int main() {
lbl:
    return a;
    return 0;
}